objects/AccountProductPeriodForecast.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Period.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_Forecasted_Quantity__c</fullName>
        <description>This is a custom field that is looking at the native ForecastedQuantity field and rounds to remove any decimals. This is added to the forecast as a custom metric.</description>
        <formula>ROUND(ForecastedQuantity,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFG_Sales_Agreement_Planned_Quantity__c</fullName>
        <description>This is a custom field that is looking at the native SalesAgreementPlannedQuantity field and rounds to remove any decimals. This is added to the forecast as a custom metric.</description>
        <formula>ROUND(SalesAgreementPlannedQuantity,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agreement Planned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Forecast__c</fullName>
        <description>Seasonality Curve Demo</description>
        <formula>ForecastedQuantity - CurrentOrdersQuantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seasonality_Curve__c</fullName>
        <description>Seasonality Curve Demo</description>
        <formula>PastOrdersQuantity / Total_Last_Year_s_Orders_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seasonality Curve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Last_Year_s_Orders_Quantity__c</fullName>
        <description>This field represents the *Total Last Year&apos;s Orders Quantity* from the Account Product Forecast related record. The value of this field is set by Process Builder because the Account Product Period Forecast object does not currently support formula fields that lookup to related parent objects. This field is used in the *Seasonal % *formula field to calculation.</description>
        <label>Total Last Year&apos;s Orders Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Product_Quantity__c</fullName>
        <description>This field represents the sum of Total Sales Agreement Planned Quantity and Total Opportunity Quantity from the Account Product Forecast related record. The value of this field is set by Process Builder because the Account Product Period Forecast object does not support formula fields that lookup to related parent objects. This field is used in the *Forecast Formula Builder *(Setup→Account Forecasting).</description>
        <label>Total Product Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>